updating some info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"> 
                 <span class="d-block d-lg-none">Hayder Abdulsahib</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/my profile photo.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="profile photo" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -71,7 +71,7 @@
                             <div class="subheading mb-3">Al Qastal For Producing Juice & Carbonated Soft Drinks Co.</div>
                             <p>I was responsible for arranging the warehouse, ordering any items for the warehouse, making a continuous check for the availability of the items, providing the employees with the necessary items. Adding, removing the items from the corporation application, adding invoices to the application.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2019 - December 2019</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2019 - January 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -79,7 +79,7 @@
                             <div class="subheading mb-3">Subway Restaurant Franchise </div>
                             <p>I was responsible for ordering products for the restaurant, checking the availability of the products in the restaurant stock, training new employees, adding data to the restaurant system. Working with other employees to arrange the restaurant, serving the customers of the restaurant</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2017 - December 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2017 - December 2018</span></div>
                     </div>
                     <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -136,8 +136,14 @@
                         <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-yarn"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-yarn"></i></li>
+                        <li class="list-inline-item" style="font-size:35px"><i class="fab fa-node-js"></i>Express</li>
+                        <li class="list-inline-item"><img src="assets/img/redux.png" alt="redux" width="150px" height="80px"></li>
+                        <li class="list-inline-item"><img src="https://socket.io/css/images/logo.svg" alt="socket.io" width="150px" height="80px"></li>
+
+
+
                         <!-- <li class="list-inline-item"><i class="fab fa-wordpress"></i></li> -->
                         <!-- <li class="list-inline-item"><i class="fab fa-gulp"></i></li> -->
                         <!-- <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
@@ -161,6 +167,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Fast Learner
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Work with team
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -169,7 +179,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Project</h2>
-                    <a href="https://github.com/Hayder-Abdulsahib/Library-Hakathon.git"><img src="assets/img/library-project.png" alt="library-project" width="800px" height="500px" class="img-radius" ></a>
+                    <h4 class="mb-5">Junior chemist: a browser game the help students to understand chemistry</h4>
+                    <a href="https://junior-chemists.netlify.app/"><img src="assets/img/junior-chemist.png" alt="junior-chemist" width="800px" height="500px" class="img-radius" ></a>
 
                     <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
@@ -183,11 +194,11 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <!-- <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> -->
-                            Full Stack Development Course At Coded Academy
+                            Full Stack Development Course At Coded Academy (From 17-05-2021 to 30-08-2021)
                         </li>
                         <li>
                             <!-- <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> -->
-                            CCNA (Routing and Switching) At Pioneers Academy (From 24-02-2019 to 10-4-2019)
+                            CCNA (Routing and Switching) At Pioneers Academy (From 24-02-2019 to 10-04-2019)
                         </li>
                         <li>
                             <!-- <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
