--- a/index.html
+++ b/index.html
@@ -130,15 +130,16 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5" style="color:#E24E1F"></i></li>
                         <!-- <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square" style="color:yellow"></i></li>
                         <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-git-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-yarn"></i></li>
-                        <li class="list-inline-item" style="font-size:35px"><i class="fab fa-node-js"></i>Express</li>
+                        <li class="list-inline-item"><i class="fab fa-react" style="color:#61DAFB"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-node" style="color:#6FA760"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-git-alt" style="color:#F54D27"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-yarn" style="color:#2C8EBB"></i></li>
+                        <li class="list-inline-item" style="font-size:33px; color: #353535"><i class="fab fa-node-js"></i>Express</li>
+                        <li class="list-inline-item" style="color: #399AF3; font-size:33px"><img src="assets/img/sequalize.png" alt="redux" width="50px" height="50px">Sequelize</li>
                         <li class="list-inline-item"><img src="assets/img/redux.png" alt="redux" width="150px" height="80px"></li>
                         <li class="list-inline-item"><img src="https://socket.io/css/images/logo.svg" alt="socket.io" width="150px" height="80px"></li>
 
