--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     <p class="lead mb-5">I am passionate about development and want to be more professional in my field, with an eager to learn new technologies. I also seek challenging assignment and responsibility, with an opportunity for growth and career advancement as successful achievements.</p>
                     <div class="social-icons">
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a> -->
-                        <a class="social-icon" href="https://github.com/Hayder-Abdulsahib"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" style="color: white" href="https://github.com/Hayder-Abdulsahib" target="socail media" title="github account"><i class="fab fa-github"></i></a>
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
-                        <a class="social-icon" href="https://web.facebook.com/hyder.sahib.16/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://web.facebook.com/hyder.sahib.16/" target="socail media"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -179,7 +179,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Project</h2>
                     <h4 class="mb-5">Junior chemist: a browser game the help students to understand chemistry</h4>
-                    <a href="https://junior-chemists.netlify.app/"><img src="assets/img/junior-chemist.png" alt="junior-chemist" width="800px" height="500px" class="img-radius" ></a>
+                    <a href="https://junior-chemists.netlify.app/" target="project"><img src="assets/img/junior-chemist.png" alt="junior-chemist" width="800px" height="500px" class="img-radius" ></a>
 
                     <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
