--- a/index.html
+++ b/index.html
@@ -131,23 +131,27 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5" style="color:#E24E1F"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-js-square" style="color:yellow"></i></li>
-                        <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
-                        <li class="list-inline-item"><i class="fab fa-react" style="color:#61DAFB"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node" style="color:#6FA760"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-git-alt" style="color:#F54D27"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-yarn" style="color:#2C8EBB"></i></li>
-                        <li class="list-inline-item" style="font-size:33px; color: #353535"><i class="fab fa-node-js"></i>Express</li>
-                        <li class="list-inline-item" style="color: #399AF3; font-size:33px"><img src="assets/img/sequalize.png" alt="redux" width="50px" height="50px">Sequelize</li>
-                        <li class="list-inline-item"><img src="assets/img/redux.png" alt="redux" width="150px" height="80px"></li>
-                        <li class="list-inline-item"><img src="https://socket.io/css/images/logo.svg" alt="socket.io" width="150px" height="80px"></li>
+                        <li class="list-inline-item"><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="skills" title="HTML"><i class="fab fa-html5" style="color:#E24E1F"></i></a></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-html5" style="color:#E24E1F"></i></li> -->
+                        <li class="list-inline-item"><a href="https://www.javascript.com/" target="skills" title="Javascript"><i class="fab fa-js-square" style="color:yellow"></i></a></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-js-square" style="color:yellow"></i></li> -->
+                        <li class="list-inline-item"><a href="https://reactjs.org/" target="skills" title="React"><i class="fab fa-react" style="color:#61DAFB"></i></a></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-react" style="color:#61DAFB"></i></li> -->
+                        <li class="list-inline-item"><a href="https://nodejs.org/en/about/" target="skills" title="Node.js"><i class="fab fa-node" style="color:#6FA760"></i></a></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-node" style="color:#6FA760"></i></li> -->
+                        <li class="list-inline-item"><a href="https://git-scm.com/" target="skills" title="Git"><i class="fab fa-git-alt" style="color:#F54D27"></i></a></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-git-alt" style="color:#F54D27"></i></li> -->
+                        <li class="list-inline-item"><a href="https://yarnpkg.com/" target="skills" title="Yarn"><i class="fab fa-yarn" style="color:#2C8EBB"></i></a></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-yarn" style="color:#2C8EBB"></i></li> -->
+                        <li class="list-inline-item" ><a style="font-size:33px; color: #353535; text-decoration: none;" href="https://expressjs.com/" target="skills" title="Express"><i class="fab fa-node-js"></i>Express</a></li>
+                        <!-- <li class="list-inline-item" style="font-size:33px; color: #353535"><i class="fab fa-node-js"></i>Express</li> -->
+                        <li class="list-inline-item" ><a style="color: #399AF3; font-size:33px; text-decoration: none;" href="https://sequelize.org/" target="skills" title="Sequelize"><img src="assets/img/sequalize.png" alt="redux" width="50px" height="50px">Sequelize</a></li>
+                        <!-- <li class="list-inline-item" style="color: #399AF3; font-size:33px;"><img src="assets/img/sequalize.png" alt="redux" width="50px" height="50px">Sequelize</li> -->
+                        <li class="list-inline-item"><a href="https://redux.js.org/" target="skills" title="Redux"><img src="assets/img/redux.png" alt="redux" width="150px" height="80px"></a></li>
+                        <!-- <li class="list-inline-item"><img src="assets/img/redux.png" alt="redux" width="150px" height="80px"></li> -->
+                        <li class="list-inline-item"><a href="https://socket.io/" target="skills" title="Socket.io"><img src="https://socket.io/css/images/logo.svg" alt="socket.io" width="150px" height="80px"></a></li>
+                        <!-- <li class="list-inline-item"><img src="https://socket.io/css/images/logo.svg" alt="socket.io" width="150px" height="80px"></li> -->
 
-                        <!-- <li class="list-inline-item"><i class="fab fa-wordpress"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-gulp"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
                     </ul>
                     <div class="subheading mb-3">Strength</div>
                     <ul class="fa-ul mb-0">
@@ -180,7 +184,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Project</h2>
                     <h4 class="mb-5">Junior chemist: a browser game the help students to understand chemistry</h4>
-                    <a href="https://junior-chemists.netlify.app/" target="project"><img src="assets/img/junior-chemist.png" alt="junior-chemist" width="800px" height="500px" class="img-radius" ></a>
+                    <a href="https://junior-chemists.netlify.app/" target="project" title="Junior Chemis Website"><img src="assets/img/junior-chemist.png" alt="junior-chemist" width="800px" height="500px" class="img-radius" ></a>
 
                     <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
