--- a/index.html
+++ b/index.html
@@ -142,16 +142,20 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">Warehouse Distribution & Data Entry</h3>
+              <h3 class="mb-0">Backend Software Developer</h3>
               <div class="subheading mb-3">
-                Al Qastal For Producing Juice & Carbonated Soft Drinks Co.
+                NADSOFT
               </div>
               <p>
-                I was responsible for arranging the warehouse, ordering any
-                items for the warehouse, making a continuous check for the
-                availability of the items, providing the employees with the
-                necessary items. Adding, removing the items from the corporation
-                application, adding invoices to the application.
+                I was responsible for managing the backend infrastructure of multiple projects, help building 
+                and maintain scalable RESTful APIs and gRPC services, using Node.js and related technologies.
+                
+                Being a part of collaborate team, and playing a key role to provide an engaging sofwares, that 
+                guarantee customer satisfaction, implement caching mechanisms using Redis and other techniques to 
+                enhance application performance.
+                
+                Building data models and schema with ORMs such as Prisma, or building them in by raw query, 
+                writes efficient queries to provide optimal application performance, and handling heavy load and large data.    
               </p>
             </div>
             <div class="flex-shrink-0">
