--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                 guarantee customer satisfaction, implement caching mechanisms using Redis and other techniques to 
                 enhance application performance.
                 
-                Building data models and schema with ORMs such as Prisma, or building them in by raw query, 
+                Building data models and schema with ORMs such as Prisma, or building them in raw query, 
                 writes efficient queries to provide optimal application performance, and handling heavy load and large data.    
               </p>
             </div>
             <div class="flex-shrink-0">
-              <span class="text-primary">April 2019 - January 2020</span>
+              <span class="text-primary">August 2022 - Present</span>
             </div>
           </div>
           <div
